# sdcpppal

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: README.md
src/sdcpppal/: __init__.py  server.py
tests/: test_connectivity.py  test_server.py
